--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 TaskApp/GoogleService-Info.plist
+TaskApp/Info.plist
 
 ## Build generated
 build/
